crates/slate/tests/snapshots/redundant_parens.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn classify(arg0: i32, arg1: i32) -> i32 {
    let mut a: i32 = 0;
    let mut b: i32 = 0;
    let mut __retval: i32 = 0;
    let mut r: i32 = 0;
    let mut t: i32 = 0;
    let mut m: i32 = 0;
    a = arg0;
    b = arg1;
    let _v0: i32 = 0;
    r = _v0;
    {
        loop {
            let _v1: i32 = a;
            let _v2: i32 = b;
            let _v3: bool = _v1 < _v2;
            if !_v3 {
                break;
            }
            {
                let _v4: i32 = a;
                let _v5: i32 = 1;
                let _v6: i32 = _v4 + _v5;
                a = _v6;
                let _v7: i32 = r;
                let _v8: i32 = 1;
                let _v9: i32 = _v7 + _v8;
                r = _v9;
            }
        }
    }
    {
        let _v10: i32 = a;
        let _v11: i32 = b;
        let _v12: bool = _v10 == _v11;
        if _v12 {
            let _v13: i32 = r;
            let _v14: i32 = 10;
            let _v15: i32 = _v13 + _v14;
            r = _v15;
        }
    }
    let _v16: i32 = a;
    let _v17: i32 = b;
    let _v18: bool = _v16 > _v17;
    let _v19: i32 = if _v18 {
        let _v20: i32 = a;
        let _v21: i32 = b;
        let _v22: i32 = _v20 - _v21;
        _v22
    } else {
        let _v23: i32 = b;
        let _v24: i32 = a;
        let _v25: i32 = _v23 - _v24;
        _v25
    };
    t = _v19;
    let _v26: i32 = a;
    let _v27: i32 = b;
    let _v28: i32 = _v26 & _v27;
    let _v29: i32 = a;
    let _v30: i32 = 1;
    let _v31: i32 = _v29 << _v30;
    let _v32: i32 = _v28 + _v31;
    m = _v32;
    let _v33: i32 = r;
    let _v34: i32 = t;
    let _v35: i32 = _v33 + _v34;
    let _v36: i32 = m;
    let _v37: i32 = _v35 + _v36;
    __retval = _v37;
    let _v38: i32 = __retval;
    return _v38;
}

fn main() {
    let mut __retval: i32 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v2: i32 = 2;
    let _v3: i32 = 5;
    let _v4: i32 = classify(_v2, _v3);
    let _v5: i32 = unsafe { printf(_v1 as *const i8, _v4) };
    let _v6: i32 = 0;
    __retval = _v6;
    let _v7: i32 = __retval;
    std::process::exit(_v7 as i32);
}
