crates/slate/tests/snapshots/setjmp_recovery_guard.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

#[repr(C)]
#[derive(Clone, Copy)]
struct __slate_jmp_buf_tag {
    __regs: [i64; 8],
    __mask_was_saved: i32,
    __saved_mask: [u64; 16],
}


static mut env: aligned::Aligned<aligned::A16, [__slate_jmp_buf_tag; 1]> = aligned::Aligned([__slate_jmp_buf_tag { __regs: [0; 8], __mask_was_saved: 0, __saved_mask: [0; 16] }; 1]);

static mut failures: i32 = 0;

unsafe extern "C" {
    fn setjmp(_0: *mut __slate_jmp_buf_tag) -> i32;
    fn longjmp(_0: *mut __slate_jmp_buf_tag, _1: i32) -> !;
    fn printf(_0: *const i8, ...) -> i32;
}

fn record_failure(arg3: *mut i8) {
    let mut phase: *mut i8 = std::ptr::null_mut();
    phase = arg3;
    let _v0: i32 = unsafe { failures };
    let _v1: i32 = _v0 + 1;
    unsafe {
        failures = _v1;
    }
    let _v2: *mut i8 = b"FAIL: %s\n\0".as_ptr() as *mut i8;
    let _v3: *mut i8 = phase;
    let _v4: i32 = unsafe { printf(_v2 as *const i8, _v3) };
    return;
}

fn inner_check(arg2: i32) {
    let mut ok: i32 = 0;
    ok = arg2;
    {
        let _v0: i32 = ok;
        let _v1: bool = _v0 != 0;
        let _v2: bool = !_v1;
        if _v2 {
            let _v3: *mut __slate_jmp_buf_tag = std::ptr::addr_of_mut!(env).cast::<__slate_jmp_buf_tag>();
            let _v4: i32 = 1;
            std::panic::panic_any(__SlateJmpPayload_env { value: _v4 as i32 });
        }
    }
    return;
}

fn run_case(arg0: i32, arg1: i32) {
    let mut id: i32 = 0;
    let mut should_fail: i32 = 0;
    id = arg0;
    should_fail = arg1;
let _v0: *mut __slate_jmp_buf_tag = std::ptr::addr_of_mut!(env).cast::<__slate_jmp_buf_tag>();
    let __sj__v1 = std::panic::catch_unwind(std::panic::AssertUnwindSafe(|| {
        let _v4: i32 = should_fail;
        let _v5: bool = _v4 != 0;
        let _v6: bool = !_v5;
        let _v7: i32 = _v6 as i32;
        inner_check(_v7);
        let _v8: *mut i8 = b"PASS: case %d\n\0".as_ptr() as *mut i8;
        let _v9: i32 = id;
        let _v10: i32 = unsafe { printf(_v8 as *const i8, _v9) };
}));
    match __sj__v1 {
        Ok(_) => {
        }
        Err(__sj_payload__v1) => {
                let _v1: i32 = match __sj_payload__v1.downcast::<__SlateJmpPayload_env>() { Ok(__sj_p) => __sj_p.value, Err(__sj_other) => std::panic::resume_unwind(__sj_other) };
            let _v3: *mut i8 = b"case\0".as_ptr() as *mut i8;
            record_failure(_v3);
            return;
        }
    }
}

fn main() {
    let mut __retval: i32 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    {
        let mut i: i32 = 0;
        let _v1: i32 = 0;
        i = _v1;
        '__loop0: loop {
            let _v2: i32 = i;
            let _v3: i32 = 4;
            let _v4: bool = _v2 < _v3;
            if !_v4 {
                break;
            }
            '__continue0: {
                {
                    let _v5: *mut __slate_jmp_buf_tag = std::ptr::addr_of_mut!(env).cast::<__slate_jmp_buf_tag>();
                        let __sj__v6 = std::panic::catch_unwind(std::panic::AssertUnwindSafe(|| {
    let _v9: i32 = i;
    let _v10: i32 = i;
    let _v11: i32 = 2;
    let _v12: bool = _v10 == _v11;
    let _v13: i32 = _v12 as i32;
    run_case(_v9, _v13);
}));
                        match __sj__v6 {
                            Ok(_) => {
                            }
                            Err(__sj_payload__v6) => {
                                    let _v6: i32 = match __sj_payload__v6.downcast::<__SlateJmpPayload_env>() { Ok(__sj_p) => __sj_p.value, Err(__sj_other) => std::panic::resume_unwind(__sj_other) };
                                let _v8: *mut i8 = b"loop\0".as_ptr() as *mut i8;
                                record_failure(_v8);
                                break '__continue0;
                            }
                        }
                }
            }
            let _v14: i32 = i;
            let _v15: i32 = _v14 + 1;
            i = _v15;
        }
    }
    let _v16: *mut i8 = b"failures: %d\n\0".as_ptr() as *mut i8;
    let _v17: i32 = unsafe { failures };
    let _v18: i32 = unsafe { printf(_v16 as *const i8, _v17) };
    let _v19: i32 = 0;
    __retval = _v19;
    let _v20: i32 = __retval;
    std::process::exit(_v20 as i32);
}

struct __SlateJmpPayload_env {
    value: i32,
}
