crates/slate/tests/snapshots/setjmp_recovery_loop_continue.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

#[repr(C)]
#[derive(Clone, Copy)]
struct __slate_jmp_buf_tag {
    __regs: [i64; 8],
    __mask_was_saved: i32,
    __saved_mask: [u64; 16],
}


static mut env: aligned::Aligned<aligned::A16, [__slate_jmp_buf_tag; 1]> = aligned::Aligned([__slate_jmp_buf_tag { __regs: [0; 8], __mask_was_saved: 0, __saved_mask: [0; 16] }; 1]);

static mut failures: i32 = 0;

static mut teardown_failures: i32 = 0;

unsafe extern "C" {
    fn setjmp(_0: *mut __slate_jmp_buf_tag) -> i32;
    fn printf(_0: *const i8, ...) -> i32;
    fn longjmp(_0: *mut __slate_jmp_buf_tag, _1: i32) -> !;
}

fn run_test(arg0: i32) {
    let mut i: i32 = 0;
    i = arg0;
    {
        let _v0: i32 = i;
        let _v1: i32 = 2;
        let _v2: bool = _v0 == _v1;
        if _v2 {
            let _v3: *mut __slate_jmp_buf_tag = std::ptr::addr_of_mut!(env).cast::<__slate_jmp_buf_tag>();
            let _v4: i32 = 1;
            std::panic::panic_any(__SlateJmpPayload_env { value: _v4 as i32 });
        }
    }
    let _v5: *mut i8 = b"ran %d\n\0".as_ptr() as *mut i8;
    let _v6: i32 = i;
    let _v7: i32 = unsafe { printf(_v5 as *const i8, _v6) };
    return;
}

fn main() {
    let mut __retval: i32 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    {
        let mut i: i32 = 0;
        let _v1: i32 = 0;
        i = _v1;
        '__loop0: loop {
            let _v2: i32 = i;
            let _v3: i32 = 5;
            let _v4: bool = _v2 < _v3;
            if !_v4 {
                break;
            }
            '__continue0: {
                {
                    let _v5: *mut __slate_jmp_buf_tag = std::ptr::addr_of_mut!(env).cast::<__slate_jmp_buf_tag>();
                        let __sj__v6 = std::panic::catch_unwind(std::panic::AssertUnwindSafe(|| {
    let _v13: i32 = i;
    run_test(_v13);
    {
        let _v14: i32 = i;
        let _v15: i32 = 3;
        let _v16: bool = _v14 == _v15;
        if _v16 {
            let _v17: i32 = unsafe { teardown_failures };
            let _v18: i32 = _v17 + 1;
            unsafe {
                teardown_failures = _v18;
            }
            return 1;
        }
    }
    let _v19: *mut i8 = b"teardown ok %d\n\0".as_ptr() as *mut i8;
    let _v20: i32 = i;
    let _v21: i32 = unsafe { printf(_v19 as *const i8, _v20) };
    0
}));
                        match __sj__v6 {
                            Ok(__sj_signal___sj__v6) => {
                                    match __sj_signal___sj__v6 {
                                        1 => {
                                                break '__continue0;
                                        }
                                        _ => {
                                        }
                                    }
                            }
                            Err(__sj_payload__v6) => {
                                    let _v6: i32 = match __sj_payload__v6.downcast::<__SlateJmpPayload_env>() { Ok(__sj_p) => __sj_p.value, Err(__sj_other) => std::panic::resume_unwind(__sj_other) };
                                let _v8: i32 = unsafe { failures };
                                let _v9: i32 = _v8 + 1;
                                unsafe {
                                    failures = _v9;
                                }
                                let _v10: *mut i8 = b"recovered %d\n\0".as_ptr() as *mut i8;
                                let _v11: i32 = i;
                                let _v12: i32 = unsafe { printf(_v10 as *const i8, _v11) };
                                break '__continue0;
                            }
                        }
                }
            }
            let _v22: i32 = i;
            let _v23: i32 = _v22 + 1;
            i = _v23;
        }
    }
    let _v24: *mut i8 = b"failures=%d teardown_failures=%d\n\0".as_ptr() as *mut i8;
    let _v25: i32 = unsafe { failures };
    let _v26: i32 = unsafe { teardown_failures };
    let _v27: i32 = unsafe { printf(_v24 as *const i8, _v25, _v26) };
    let _v28: i32 = 0;
    __retval = _v28;
    let _v29: i32 = __retval;
    std::process::exit(_v29 as i32);
}

struct __SlateJmpPayload_env {
    value: i32,
}
