crates/slate/tests/snapshots/slice_swap_fixup.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn pairwise_swap(arg4: *mut i32, arg5: i32) {
    let mut items: *mut i32 = std::ptr::null_mut();
    let mut len: i32 = 0;
    items = arg4;
    len = arg5;
    {
        let mut i: i32 = 0;
        let _v0: i32 = 0;
        i = _v0;
        loop {
            let _v1: i32 = i;
            let _v2: i32 = len;
            let _v3: bool = _v1 < _v2;
            if !_v3 {
                break;
            }
            {
                {
                    let mut j: i32 = 0;
                    let _v4: i32 = 0;
                    j = _v4;
                    loop {
                        let _v5: i32 = j;
                        let _v6: i32 = len;
                        let _v7: bool = _v5 < _v6;
                        if !_v7 {
                            break;
                        }
                        {
                            {
                                let _v8: i32 = i;
                                let _v9: i64 = _v8 as i64;
                                let _v10: *mut i32 = items;
                                let _v11: *mut i32 = unsafe { _v10.offset(_v9 as isize) };
                                let _v12: i32 = unsafe { *_v11 };
                                let _v13: i32 = j;
                                let _v14: i64 = _v13 as i64;
                                let _v15: *mut i32 = items;
                                let _v16: *mut i32 = unsafe { _v15.offset(_v14 as isize) };
                                let _v17: i32 = unsafe { *_v16 };
                                let _v18: bool = _v12 > _v17;
                                if _v18 {
                                    let mut tmp: i32 = 0;
                                    let _v19: i32 = i;
                                    let _v20: i64 = _v19 as i64;
                                    let _v21: *mut i32 = items;
                                    let _v22: *mut i32 = unsafe { _v21.offset(_v20 as isize) };
                                    let _v23: i32 = unsafe { *_v22 };
                                    tmp = _v23;
                                    let _v24: i32 = j;
                                    let _v25: i64 = _v24 as i64;
                                    let _v26: *mut i32 = items;
                                    let _v27: *mut i32 = unsafe { _v26.offset(_v25 as isize) };
                                    let _v28: i32 = unsafe { *_v27 };
                                    let _v29: i32 = i;
                                    let _v30: i64 = _v29 as i64;
                                    let _v31: *mut i32 = items;
                                    let _v32: *mut i32 = unsafe { _v31.offset(_v30 as isize) };
                                    unsafe {
                                        *_v32 = _v28;
                                    }
                                    let _v33: i32 = tmp;
                                    let _v34: i32 = j;
                                    let _v35: i64 = _v34 as i64;
                                    let _v36: *mut i32 = items;
                                    let _v37: *mut i32 = unsafe { _v36.offset(_v35 as isize) };
                                    unsafe {
                                        *_v37 = _v33;
                                    }
                                }
                            }
                        }
                        let _v38: i32 = j;
                        let _v39: i32 = _v38 + 1;
                        j = _v39;
                    }
                }
            }
            let _v40: i32 = i;
            let _v41: i32 = _v40 + 1;
            i = _v41;
        }
    }
    return;
}

fn pairwise_swap_tmp_reused(arg2: *mut i32, arg3: i32) {
    let mut items: *mut i32 = std::ptr::null_mut();
    let mut len: i32 = 0;
    items = arg2;
    len = arg3;
    {
        let mut i: i32 = 0;
        let _v0: i32 = 0;
        i = _v0;
        loop {
            let _v1: i32 = i;
            let _v2: i32 = len;
            let _v3: bool = _v1 < _v2;
            if !_v3 {
                break;
            }
            {
                {
                    let mut j: i32 = 0;
                    let _v4: i32 = 0;
                    j = _v4;
                    loop {
                        let _v5: i32 = j;
                        let _v6: i32 = len;
                        let _v7: bool = _v5 < _v6;
                        if !_v7 {
                            break;
                        }
                        {
                            {
                                let _v8: i32 = i;
                                let _v9: i64 = _v8 as i64;
                                let _v10: *mut i32 = items;
                                let _v11: *mut i32 = unsafe { _v10.offset(_v9 as isize) };
                                let _v12: i32 = unsafe { *_v11 };
                                let _v13: i32 = j;
                                let _v14: i64 = _v13 as i64;
                                let _v15: *mut i32 = items;
                                let _v16: *mut i32 = unsafe { _v15.offset(_v14 as isize) };
                                let _v17: i32 = unsafe { *_v16 };
                                let _v18: bool = _v12 > _v17;
                                if _v18 {
                                    let mut tmp: i32 = 0;
                                    let _v19: i32 = i;
                                    let _v20: i64 = _v19 as i64;
                                    let _v21: *mut i32 = items;
                                    let _v22: *mut i32 = unsafe { _v21.offset(_v20 as isize) };
                                    let _v23: i32 = unsafe { *_v22 };
                                    tmp = _v23;
                                    let _v24: i32 = j;
                                    let _v25: i64 = _v24 as i64;
                                    let _v26: *mut i32 = items;
                                    let _v27: *mut i32 = unsafe { _v26.offset(_v25 as isize) };
                                    let _v28: i32 = unsafe { *_v27 };
                                    let _v29: i32 = i;
                                    let _v30: i64 = _v29 as i64;
                                    let _v31: *mut i32 = items;
                                    let _v32: *mut i32 = unsafe { _v31.offset(_v30 as isize) };
                                    unsafe {
                                        *_v32 = _v28;
                                    }
                                    let _v33: i32 = tmp;
                                    let _v34: i32 = j;
                                    let _v35: i64 = _v34 as i64;
                                    let _v36: *mut i32 = items;
                                    let _v37: *mut i32 = unsafe { _v36.offset(_v35 as isize) };
                                    unsafe {
                                        *_v37 = _v33;
                                    }
                                    let _v38: *mut i8 = b"tmp=%d\n\0".as_ptr() as *mut i8;
                                    let _v39: i32 = tmp;
                                    let _v40: i32 = unsafe { printf(_v38 as *const i8, _v39) };
                                }
                            }
                        }
                        let _v41: i32 = j;
                        let _v42: i32 = _v41 + 1;
                        j = _v42;
                    }
                }
            }
            let _v43: i32 = i;
            let _v44: i32 = _v43 + 1;
            i = _v44;
        }
    }
    return;
}

fn nested_self_swap(arg0: *mut i32, arg1: i32) {
    let mut items: *mut i32 = std::ptr::null_mut();
    let mut len: i32 = 0;
    items = arg0;
    len = arg1;
    {
        let mut i: i32 = 0;
        let _v0: i32 = 0;
        i = _v0;
        loop {
            let _v1: i32 = i;
            let _v2: i32 = len;
            let _v3: bool = _v1 < _v2;
            if !_v3 {
                break;
            }
            {
                {
                    let mut j: i32 = 0;
                    let _v4: i32 = 0;
                    j = _v4;
                    loop {
                        let _v5: i32 = j;
                        let _v6: i32 = len;
                        let _v7: bool = _v5 < _v6;
                        if !_v7 {
                            break;
                        }
                        {
                            {
                                let _v8: i32 = i;
                                let _v9: i64 = _v8 as i64;
                                let _v10: *mut i32 = items;
                                let _v11: *mut i32 = unsafe { _v10.offset(_v9 as isize) };
                                let _v12: i32 = unsafe { *_v11 };
                                let _v13: i32 = 0;
                                let _v14: bool = _v12 > _v13;
                                if _v14 {
                                    let mut tmp: i32 = 0;
                                    let _v15: i32 = j;
                                    let _v16: i64 = _v15 as i64;
                                    let _v17: *mut i32 = items;
                                    let _v18: *mut i32 = unsafe { _v17.offset(_v16 as isize) };
                                    let _v19: i32 = unsafe { *_v18 };
                                    tmp = _v19;
                                    let _v20: i32 = j;
                                    let _v21: i64 = _v20 as i64;
                                    let _v22: *mut i32 = items;
                                    let _v23: *mut i32 = unsafe { _v22.offset(_v21 as isize) };
                                    let _v24: i32 = unsafe { *_v23 };
                                    let _v25: i32 = j;
                                    let _v26: i64 = _v25 as i64;
                                    let _v27: *mut i32 = items;
                                    let _v28: *mut i32 = unsafe { _v27.offset(_v26 as isize) };
                                    unsafe {
                                        *_v28 = _v24;
                                    }
                                    let _v29: i32 = tmp;
                                    let _v30: i32 = j;
                                    let _v31: i64 = _v30 as i64;
                                    let _v32: *mut i32 = items;
                                    let _v33: *mut i32 = unsafe { _v32.offset(_v31 as isize) };
                                    unsafe {
                                        *_v33 = _v29;
                                    }
                                }
                            }
                        }
                        let _v34: i32 = j;
                        let _v35: i32 = _v34 + 1;
                        j = _v35;
                    }
                }
            }
            let _v36: i32 = i;
            let _v37: i32 = _v36 + 1;
            i = _v37;
        }
    }
    return;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut a: aligned::Aligned<aligned::A16, [i32; 5]> = aligned::Aligned([0; 5]);
    let mut b: [i32; 3] = [0; 3];
    let mut c: [i32; 3] = [0; 3];
    let _v0: i32 = 0;
    __retval = _v0;
    *a = [5, 3, 4, 1, 2];
    let _v1: *mut i32 = a.as_mut_ptr() as *mut i32;
    let _v2: i32 = 5;
    pairwise_swap(_v1, _v2);
    let _v3: *mut i8 = b"%d %d %d %d %d\n\0".as_ptr() as *mut i8;
    let _v4: i64 = 0;
    let _v5: i32 = a[(_v4 as usize)];
    let _v6: i64 = 1;
    let _v7: i32 = a[(_v6 as usize)];
    let _v8: i64 = 2;
    let _v9: i32 = a[(_v8 as usize)];
    let _v10: i64 = 3;
    let _v11: i32 = a[(_v10 as usize)];
    let _v12: i64 = 4;
    let _v13: i32 = a[(_v12 as usize)];
    let _v14: i32 = unsafe { printf(_v3 as *const i8, _v5, _v7, _v9, _v11, _v13) };
    b = [3, 1, 2];
    let _v15: *mut i32 = b.as_mut_ptr() as *mut i32;
    let _v16: i32 = 3;
    pairwise_swap_tmp_reused(_v15, _v16);
    let _v17: *mut i8 = b"%d %d %d\n\0".as_ptr() as *mut i8;
    let _v18: i64 = 0;
    let _v19: i32 = b[(_v18 as usize)];
    let _v20: i64 = 1;
    let _v21: i32 = b[(_v20 as usize)];
    let _v22: i64 = 2;
    let _v23: i32 = b[(_v22 as usize)];
    let _v24: i32 = unsafe { printf(_v17 as *const i8, _v19, _v21, _v23) };
    c = [7, 8, 9];
    let _v25: *mut i32 = c.as_mut_ptr() as *mut i32;
    let _v26: i32 = 3;
    nested_self_swap(_v25, _v26);
    let _v27: *mut i8 = b"%d %d %d\n\0".as_ptr() as *mut i8;
    let _v28: i64 = 0;
    let _v29: i32 = c[(_v28 as usize)];
    let _v30: i64 = 1;
    let _v31: i32 = c[(_v30 as usize)];
    let _v32: i64 = 2;
    let _v33: i32 = c[(_v32 as usize)];
    let _v34: i32 = unsafe { printf(_v27 as *const i8, _v29, _v31, _v33) };
    let _v35: i32 = 0;
    __retval = _v35;
    let _v36: i32 = __retval;
    std::process::exit(_v36 as i32);
}
