crates/slate/tests/snapshots/stat_struct.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

#[repr(C)]
#[derive(Clone, Copy)]
struct stat {
    st_dev: u64,
    st_ino: u64,
    st_nlink: u64,
    st_mode: u32,
    st_uid: u32,
    st_gid: u32,
    __pad0: u32,
    st_rdev: u64,
    st_size: i64,
    st_blksize: i64,
    st_blocks: i64,
    st_atim: libc::timespec,
    st_mtim: libc::timespec,
    st_ctim: libc::timespec,
    __unused: [i64; 3],
}


unsafe extern "C" {
    fn stat(_0: *const i8, _1: *mut stat) -> i32;
    fn printf(_0: *const i8, ...) -> i32;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut info: stat = stat { st_dev: 0, st_ino: 0, st_nlink: 0, st_mode: 0, st_uid: 0, st_gid: 0, __pad0: 0, st_rdev: 0, st_size: 0, st_blksize: 0, st_blocks: 0, st_atim: libc::timespec { tv_sec: 0, tv_nsec: 0 }, st_mtim: libc::timespec { tv_sec: 0, tv_nsec: 0 }, st_ctim: libc::timespec { tv_sec: 0, tv_nsec: 0 }, __unused: [0; 3] };
    let mut result: i32 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    info = stat { st_dev: 0, st_ino: 0, st_nlink: 0, st_mode: 0, st_uid: 0, st_gid: 0, __pad0: 0, st_rdev: 0, st_size: 0, st_blksize: 0, st_blocks: 0, st_atim: libc::timespec { tv_sec: 0, tv_nsec: 0 }, st_mtim: libc::timespec { tv_sec: 0, tv_nsec: 0 }, st_ctim: libc::timespec { tv_sec: 0, tv_nsec: 0 }, __unused: [0; 3] };
    let _v1: *mut i8 = b"/dev/null\0".as_ptr() as *mut i8;
    let _v2: i32 = unsafe { stat(_v1 as *const i8, std::ptr::addr_of_mut!(info) as *mut stat) };
    result = _v2;
    let _v3: *mut i8 = b"%d %lld\n\0".as_ptr() as *mut i8;
    let _v4: i32 = result;
    let _v5: i64 = info.st_size;
    let _v6: i32 = unsafe { printf(_v3 as *const i8, _v4, _v5) };
    let _v7: i32 = 0;
    __retval = _v7;
    let _v8: i32 = __retval;
    std::process::exit(_v8 as i32);
}
